# femm

./: .gitignore  CMakeLists.txt  femm43_VS2008.sln  readme.md  readme.txt
ResizableLib/: CMakeLists.txt  ResizableLib.vcproj  ResizablePageEx.cpp  ResizableSheetEx.cpp
belasolv/: CMakeLists.txt  belasolv.vcproj  prob1big.cpp
csolv/: CMakeLists.txt  CSOLV.vcproj  PROB1BIG.CPP
dlib/dlib/: optimization.h  revision.h
dlib/dlib/optimization/: optimization_pso.h
femm/: CDRAWDOC.CPP  CDRAWLUA.CPP  CMakeLists.txt  FemmeDoc.cpp  FemmviewDoc.cpp  HDRAWDOC.CPP  HDRAWLUA.CPP  MOVECOPY.CPP  StdAfx.h  bd_OpArcSegDlg.cpp  bd_movecopy.cpp  bd_writepoly.cpp  beladrawDoc.cpp  beladrawLua.cpp  belaviewDoc.cpp  cd_OpArcSegDlg.cpp  cd_movecopy.cpp  cd_writepoly.cpp  dlib_lua.cpp  dlib_lua.h  femm.vcproj  femmeLua.cpp  hd_OpArcSegDlg.cpp  hd_movecopy.cpp  hd_writepoly.cpp  writepoly.cpp
femmplot/: CMakeLists.txt  femmplot.vcproj
fkn/: CMakeLists.txt  femmedoccore.cpp  femmedoccore.h  fkn.vcproj  main.cpp  prob1big.cpp  prob2big.cpp  prob3big.cpp
hsolv/: CMakeLists.txt  HSOLV.vcproj  prob1big.cpp
liblua/: CMakeLists.txt  liblua.vcproj
manual/: heatlua.tex  manual.vcproj
mathfemm/: mathfemm.m
scifemm/: scifemm.sci  scilink.vcproj
triangle/: CMakeLists.txt  triangle.vcproj
